FPGA_Files/Software/.metadata/.plugins/org.eclipse.cdt.ui/xhwicap_intr_example_1.build.log
16:58:17 **** Incremental Build of configuration Debug for project xhwicap_intr_example_1 ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/xhwicap_intr_example.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xhwicap_intr_example.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Software/shifting_led/export/shifting_led/sw/shifting_led/standalone_domain/bspinclude/include -MMD -MP -MF"src/xhwicap_intr_example.d" -MT"src/xhwicap_intr_example.o" -o "src/xhwicap_intr_example.o" "../src/xhwicap_intr_example.c"
../src/xhwicap_intr_example.c:69:9: note: #pragma message: This is an example to show the usage of the device/driver in Interrupt 	mode. The user has to give a valid partial bitstream as an input to 	the example otherwise it may overwrite the existing configuration 	data in the device and result in unpredictable behaviour
   69 | #pragma message ("This is an example to show the usage of the device/driver in Interrupt \
      |         ^~~~~~~
../src/xhwicap_intr_example.c:83:23: error: unknown type name 'XIntc'
   83 | int HwIcapIntrExample(XIntc *IntcInstancePtr,
      |                       ^~~~~
../src/xhwicap_intr_example.c:90:39: error: unknown type name 'XIntc'
   90 | static int HwIcapSetupInterruptSystem(XIntc* IntcInstancePtr,
      |                                       ^~~~~
../src/xhwicap_intr_example.c:100:8: error: unknown type name 'XIntc'
  100 | static XIntc IntcInstance; /* The instance of the Interrupt Controller */
      |        ^~~~~
../src/xhwicap_intr_example.c: In function 'main':
../src/xhwicap_intr_example.c:141:11: warning: implicit declaration of function 'HwIcapIntrExample'; did you mean 'HwIcapIntrHandler'? [-Wimplicit-function-declaration]
  141 |  Status = HwIcapIntrExample(&IntcInstance, &HwIcapInstance,
      |           ^~~~~~~~~~~~~~~~~
      |           HwIcapIntrHandler
../src/xhwicap_intr_example.c:61:27: error: 'XPAR_INTC_0_HWICAP_0_VEC_ID' undeclared (first use in this function)
   61 | #define HWICAP_IRPT_INTR  XPAR_INTC_0_HWICAP_0_VEC_ID
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xhwicap_intr_example.c:143:8: note: in expansion of macro 'HWICAP_IRPT_INTR'
  143 |        HWICAP_IRPT_INTR);
      |        ^~~~~~~~~~~~~~~~
../src/xhwicap_intr_example.c:61:27: note: each undeclared identifier is reported only once for each function it appears in
   61 | #define HWICAP_IRPT_INTR  XPAR_INTC_0_HWICAP_0_VEC_ID
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/xhwicap_intr_example.c:143:8: note: in expansion of macro 'HWICAP_IRPT_INTR'
  143 |        HWICAP_IRPT_INTR);
      |        ^~~~~~~~~~~~~~~~
../src/xhwicap_intr_example.c: At top level:
../src/xhwicap_intr_example.c:179:23: error: unknown type name 'XIntc'
  179 | int HwIcapIntrExample(XIntc *IntcInstancePtr, XHwIcap *HwIcapInstancePtr,
      |                       ^~~~~
../src/xhwicap_intr_example.c:332:39: error: unknown type name 'XIntc'
  332 | static int HwIcapSetupInterruptSystem(XIntc* IntcInstancePtr,
      |                                       ^~~~~
'Finished building: ../src/xhwicap_intr_example.c'
' '
'Building target: xhwicap_intr_example_1.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -LC:/GitHub/ReconHardware/FPGA_Files/Software/shifting_led/export/shifting_led/sw/shifting_led/standalone_domain/bsplib/lib -o "xhwicap_intr_example_1.elf"  ./src/xhwicap_intr_example.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
arm-xilinx-eabi-gcc.exe: error: ./src/xhwicap_intr_example.o: No such file or directory
'Finished building target: xhwicap_intr_example_1.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size xhwicap_intr_example_1.elf  |tee "xhwicap_intr_example_1.elf.size"
arm-none-eabi-size: 'xhwicap_intr_example_1.elf': No such file
'Finished building: xhwicap_intr_example_1.elf.size'
' '

16:58:18 Build Finished (took 489ms)

